--- a/Lærke_Assignment3.Rmd
+++ b/Lærke_Assignment3.Rmd
@@ -77,7 +77,6 @@ summary(ma_d$EffectSize)
 summary(ma_d$StandardError)
 ```
 
-
 ```{r Step 1.3 - Running the analysis}
 # The bigger the uncertainty, the smaller the weight we should put on a given study, etc. (go and read the tutorial).
 
@@ -136,6 +135,11 @@ Step 2: Analyse pitch variability in ASD in two new studies for which you have a
 - the data is available as Ass3_data.csv. Notice there are 2 studies (language us, and language dk), multiple trials per participant, and a few different ways to measure pitch variability (if in doubt, focus on pitch IQR, interquartile range of the log of fundamental frequency)
 - Also, let's standardize the data, so that they are compatible with our meta-analytic prior (Cohen's d is measured in SDs).
 - Is there any structure in the dataset that we should account for with random/varying effects? How would you implement that? Or, if you don't know how to do bayesian random/varying effects or don't want to bother, is there anything we would need to simplify in the dataset?
+```{r}
+new_d <- read.csv("Ass3_data.csv")
+
+```
+
 
 Step 3: Build a regression model predicting Pitch variability from Diagnosis.
 - how is the outcome distributed? (likelihood function). NB. given we are standardizing, and the meta-analysis is on that scale, gaussian is not a bad assumption, but check t-student as well. Lognormal would require us to convert the prior to that scale.
