--- a/Cecilie_Assignment3.Rmd
+++ b/Cecilie_Assignment3.Rmd
@@ -8,6 +8,57 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
+```{r}
+
+
+rt_path = gsub("\\","/",pkgbuild::rtools_path(),fixed=T)
+rt_bin = paste0(substr(rt_path,1,nchar(rt_path)-4),"/mingw_$(WIN)/bin/")
+writeLines(paste0('PATH="',rt_path,';${PATH}"'), con = "~/.Renviron")
+writeLines(paste0('Sys.setenv(BINPREF = "',rt_bin,'")'), con = "~/.Rprofile")
+```
+
+```{r}
+install.packages("jsonlite",type="source")
+Sys.getenv("BINPREF")
+readLines("~/.Rprofile")
+file.path(Sys.getenv("HOME"), ".Rprofile")
+```
+```{r}
+writeLines('PATH="${RTOOLS40_HOME}\\usr\\bin;${PATH}"', con = "~/.Renviron")
+```
+
+```{r}
+Sys.which("make")
+```
+```{r}
+install.packages("jsonlite", type = "source")
+```
+
+```{r}
+dotR <- file.path(Sys.getenv("HOME"), ".R")
+if (!file.exists(dotR)) dir.create(dotR)
+M <- file.path(dotR, "Makevars.win")
+if (!file.exists(M)) file.create(M)
+cat("\n CXX14FLAGS += -mtune=native -O3 -mmmx -msse -msse2 -msse3 -mssse3 -msse4.1 -msse4.2",
+    file = M, sep = "\n", append = FALSE)
+```
+
+```{r}
+remove.packages("rstan")
+if (file.exists(".RData")) file.remove(".RData")
+```
+
+```{r}
+Sys.setenv(DOWNLOAD_STATIC_LIBV8 = 1) # only necessary for Linux without the nodejs library / headers
+install.packages("rstan", repos = "https://cloud.r-project.org/", dependencies = TRUE)
+```
+```{r}
+example(stan_model, package = "rstan", run.dontrun = TRUE)
+```
+
+
+
 ## Assignment 3
 
 In this assignment we do the following:
@@ -27,10 +78,84 @@ Step 1: Perform a meta-analysis of pitch variability from previous studies of vo
 - N.B. the livecoding video is not perfect, you *can* (but don't have to) improve it: use a t-student likelihood, test the effects of the priors and refine them, check the robustness of results to more or less skeptical priors, etc. 
 - Write down the results of the meta-analysis in terms of a prior for step 2.
 
+```{r}
+pacman::p_load(readr, 
+               tidyverse, 
+               metafor, 
+               brms)
+
+```
+
+
 Step 2: Analyse pitch variability in ASD in two new studies for which you have access to all the trials (not just study level estimates)
 - the data is available as Ass3_data.csv. Notice there are 2 studies (language us, and language dk), multiple trials per participant, and a few different ways to measure pitch variability (if in doubt, focus on pitch IQR, interquartile range of the log of fundamental frequency)
 - Also, let's standardize the data, so that they are compatible with our meta-analytic prior (Cohen's d is measured in SDs).
 - Is there any structure in the dataset that we should account for with random/varying effects? How would you implement that? Or, if you don't know how to do bayesian random/varying effects or don't want to bother, is there anything we would need to simplify in the dataset?
+
+```{r}
+new_d <- read.csv("Ass3_data.csv")
+
+```
+
+
+```{r}
+
+plot(new_d$std_Pitch_IQR)
+
+new_d$std_Pitch_IQR <- scale(new_d$Pitch_IQR)
+
+plot(new_d$Pitch_IQR)
+
+#Writing a meta analytic formula:
+#new_f <- bf(Pitch_IQR |  ~ 1 + (1 | ID))
+new_f <- bf(std_Pitch_IQR ~ 1 + Diagnosis + (1 | ID)) #What about uncertainty? And where do we standardize?
+
+
+#Identifying the priors:
+get_prior(new_f, data = new_d, family = gaussian())
+
+new_prior <- c(
+  prior(normal(0, 1), class = Intercept), #center at overall population mean = 0
+  prior(normal(0, 0.1), class = b), #Sceptical prior. 0: we expect no difference. sd=3 would not be skeptical. Needs to be smaller than 0.4-0-6. 0.2 is still pretty big.
+  prior(normal(0, 0.05), class = sd), #skeptical again. small sd of the sd.
+  prior(normal(1, 0.5), class = sigma) #This I wrote at random
+)
+
+new_m0 <- brm(
+  new_f,
+  data = new_d,
+  family = gaussian(),
+  prior = new_prior,
+  sample_prior = "only", 
+  chains = 2,
+  cores = 2 
+)
+
+#Prior predictive check
+pp_check(new_m0, nsamples = 100)
+
+#Building our actual model:
+new_m1 <- brm(
+  new_f,
+  data = new_d,
+  family = gaussian,
+  prior = new_prior,
+  sample_prior = T,
+  chains = 2,
+  cores = 2
+)
+
+pp_check(new_m1, nsamples = 100)
+
+summary(new_m1)
+
+fixef(new_m1)
+new_mean <- fixef(new_m1)[[1]] 
+new_se <- fixef(new_m1)[[2]] 
+
+
+```
+
 
 Step 3: Build a regression model predicting Pitch variability from Diagnosis.
 - how is the outcome distributed? (likelihood function). NB. given we are standardizing, and the meta-analysis is on that scale, gaussian is not a bad assumption, but check t-student as well. Lognormal would require us to convert the prior to that scale.
