--- a/Lærke_Assignment3.Rmd
+++ b/Lærke_Assignment3.Rmd
@@ -188,6 +188,7 @@ new_m1 <- brm(
   cores = 2
 )
 
+pp_check(new_m0, nsamples = 100)
 pp_check(new_m1, nsamples = 100) #Peak and longer tails - gaussian is problematic - run a students t test
 
 post <- posterior_samples(new_m1)
@@ -400,8 +401,27 @@ plot(hypothesis(new_m2, "DiagnosisTD>0"))
 plot(hypothesis(new_m2_ma, "DiagnosisTD>0"))
 
 
+plot(new_m1)
+plot(new_m1_ma) #1:25
 ```
 
+```{r}
+pacman::p_load(loo)
+
+log_lik1 <- extract_log_lik(new_m1)
+
+loo1 <- loo(new_m1)
+loo2 <- loo(new_m1_ma)
+loo3 <- loo(new_m2)
+loo4 <- loo(new_m2_ma)
+
+
+print(loo_compare(loo1, loo2), digits = 3) #lepd: Difference in expected predictive accuracy. This test expects the model with the strict priors to have worse predicted accuracy than the model with the meta analysis priors.
+
+loo_model_weights(new_m1, new_m1_ma)
+
+print(loo_compare(loo1, loo2, loo3, loo4), digits = 3)
+```
 
 
 
