--- a/with the language.Rmd
+++ b/with the language.Rmd
@@ -234,7 +234,11 @@ ggplot(post) +
 ```
 
 ```{r Step 3.7 - Checking for influential data points (LOO)}
-#  ?? Do we need to do that here - It is in the bayesian workflowm but he doesn't specify it in this task ??
+#  ?? Do we need to do that here - It is in the bayesian workflow but he doesn't specify it in this task ??
+
+loo(new_m1)
+plot(loo(new_m1))
+# We don't have any data points over the 0.7 Pareto k threshold, which is great, we only have 3 that are close, which is ok.
 ```
 
 
@@ -311,6 +315,7 @@ plot(hypothesis(new_m1_ma, "DiagnosisTD>0")) #post learned from prior - prob mas
 
 ```{r Step 4.7 - Checking for influential data points (LOO)}
 #  ?? Do we need to do that here - It is in the bayesian workflow but he doesn't specify it in this task ??
+
 ```
 
 
