--- a/with the language.Rmd
+++ b/with the language.Rmd
@@ -356,8 +356,8 @@ post$b_DiagnosisTD_strict <- post$b_DiagnosisTD
 post2$b_DiagnosisTD_ma <- post2$b_DiagnosisTD
 
 ggplot(post) + 
-  geom_density(aes(V1), fill = "green", alpha = 0.5)  +
-  geom_density(aes(V2), fill = "blue", alpha = 0.5) + 
+  geom_density(aes(V1), fill = "pink", alpha = 0.5)  +
+  geom_density(aes(V2), fill = "purple", alpha = 0.5) + 
   xlab("Beta posterior")
 ```
 
@@ -371,3 +371,17 @@ loo_m1_ma <- loo(new_m1_ma)
 print(loo_compare(loo_m1, loo_m1_ma), digits = 3) #lepd: Difference in expected predictive accuracy. This test expects the model with the strict priors to have worse predicted accuracy than the model with the meta analysis priors.
 
 ```
+
+
+```{r Comparing the model estimates}
+summary(new_m1)
+summary(new_m1_ma)
+
+summary(ma_m1)
+
+```
+
+
+
+
+
